# Ibuki

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/filters/: channel_mix.rs  distortion.rs  equalizer.rs  karaoke.rs  low_pass.rs  mod.rs  processor.rs  rotation.rs  source.rs  timescale.rs  tremolo.rs  vibrato.rs  volume.rs
src/middlewares/: auth.rs  log.rs  version.rs
src/models/: mod.rs
src/playback/hls/: handler.rs  mod.rs  playlist.rs  segment.rs
src/routes/: endpoints.rs  global.rs  mod.rs  youtube.rs
src/source/: http.rs  mod.rs  youtube.rs  ytdlp.rs
src/source/amazonmusic/: mod.rs  model.rs  source.rs
src/source/applemusic/: mod.rs  model.rs  source.rs
src/source/deezer/: model.rs  source.rs  stream.rs
src/source/gaana/: mod.rs  model.rs  source.rs
src/source/http/: mod.rs  source.rs
src/source/jiosaavn/: mod.rs  model.rs  source.rs
src/source/songlink/: source.rs
src/source/soundcloud/: mod.rs  model.rs  source.rs
src/source/spotify/: source.rs
src/source/youtube/: api.rs  chat.rs  cipher.rs  clients.rs  common.rs  manager.rs  mod.rs  oauth.rs  sabr.rs  source.rs
src/source/youtube/stream/: mod.rs
src/util/: api_stats.rs  config.rs  decoder.rs  encoder.rs  errors.rs  frame_counter.rs  headers.rs  http.rs  mailbox.rs  mod.rs  routeplanner.rs  seek.rs  source.rs  task.rs
src/util/converter/: numbers.rs
src/voice/: events.rs  manager.rs  player.rs
src/ws/: client.rs  mod.rs  receiver.rs  sender.rs
