[package]
name = "ibuki"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"

[dependencies]
base64 = "^0.22.1"
flume = "^0.12.0"
dashmap = "^6.1.0"
dotenv = "^0.15.0"
tracing = "^0.1.44"
tracing-subscriber = "^0.3.22"
futures = "^0.3.32"
async-trait = "^0.1.89"
serde_json = "^1.0.149"
tower = "^0.5.3"
byteorder = "^1.5.0"
thiserror = "^2.0.18"
cap = "^0.1.2"
bytesize = "^2.3.1"
perf_monitor = "^0.2.1"
regex = "^1.12.3"
hex = "^0.4.3"
md5 = "^0.8.0"
blowfish = "^0.9.1"
cbc = "^0.1.2"
rand_agents = "^1.0.0"
urlencoding = "^2.1.3"
ecb = "^0.1.2"
des = "^0.8.1"
block-padding = "^0.4.2"
url = "^2.5.8"
bytes = "^1.11.1"
aes = "^0.8.4"
sysinfo = "^0.38.3"
moka = { version = "^0.12.14", features = ["sync"] }
symphonia-core = "0.5.5"
tokio-util = "^0.7.18"
pin-project = "^1.1.11"

[dependencies.mimalloc]
version = "0.1.48"
features = ["v3"]

[dependencies.kameo]
git = "https://github.com/tqwewe/kameo.git"
rev = "abf132c2f369ac84f98aeedf789c64d71501d95e"

[dependencies.uuid]
version = "^1.18.1"
features = ["v4", "v7"]

[dependencies.reqwest]
version = "^0.13.2"
default-features = false
features = ["blocking", "json"]

[dependencies.tokio]
version = "^1.50.0"
features = ["tracing", "macros", "signal", "rt-multi-thread"]

[dependencies.songbird]
git = "https://github.com/beerpsi-forks/songbird.git"
branch = "davey"
default-features = false
features = ["driver", "tungstenite", "rustls"]

[dependencies.symphonia]
version = "^0.5.5"
features = ["all"]

[dependencies.axum]
default-features = true
features = ["ws"]
version = "^0.8.8"

[dependencies.serde]
version = "^1.0.228"
features = ["derive"]
